--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="cupcake">
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/png" href="/logo.svg" /> -->
